feat: add is_validator; update logic for is_validator and version (#11)
* add is_validator; update logic for is_validator and version

* fixes after merge

* fixes after merge

* optimize version and node_pubkey updating
